[package]
name = "ov-bilidown"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
qrcode = "0.14.1"
md5 = "0.8.0"
tokio = { version = "1.47.1", features = ["full"] }
