[package]
name = "ov-bilidown"
version = "0.2.0"
edition = "2024"
description = "A Bilibili audio downloader"
license = "MIT"

[dependencies]
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
qrcode = "0.14.1"
md5 = "0.8.0"
tokio = { version = "1.47.1", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
config = "0.14"
dirs = "5.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
